kubeconfigs/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pbs-taiga
  labels:
    name: pbs-taiga
