kubeconfigs/10-taiga-protected.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taiga-protected
  namespace: pbs-taiga
  labels:
    app: taiga-protected
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: taiga-protected
  template:
    metadata:
      labels:
        app: taiga-protected
    spec:
      containers:
        - name: taiga-protected
          image: taigaio/taiga-protected:6.8.1@sha256:8a56c68b3bf8cbba73d8d4751451545410b490f424eec3a0cb0446a3a8123b4d
          ports:
            - containerPort: 8003
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            tcpSocket:
              port: 8003
          startupProbe:
            tcpSocket:
              port: 8003
            periodSeconds: 1
            failureThreshold: 60
          livenessProbe:
            tcpSocket:
              port: 8003
---
apiVersion: v1
kind: Service
metadata:
  name: taiga-protected
  namespace: pbs-taiga
spec:
  selector:
    app: taiga-protected
  ports:
    - port: 8003
      targetPort: 8003
