kubeconfigs/11-taiga-async.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: taiga-async-rabbitmq
  namespace: pbs-taiga
spec:
  selector:
    matchLabels:
      app: taiga-async-rabbitmq
  serviceName: taiga-async-rabbitmq
  replicas: 1
  template:
    metadata:
      labels:
        app: taiga-async-rabbitmq
    spec:
      nodeSelector:
        kaas.infomaniak.cloud/instance-pool: pck-8kxhclv-pdp
      containers:
        - name: taiga-async-rabbitmq
          image: rabbitmq:4.2-management-alpine@sha256:52a1120ca9e85e7cc80af73b6c17d42393c78ae32606fffc3ad895adc051e18b
          ports:
            - containerPort: 5672
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            exec:
              command: ["rabbitmq-diagnostics", "status"]
            initialDelaySeconds: 60
            # See https://www.rabbitmq.com/monitoring.html for monitoring frequency recommendations.
            periodSeconds: 60
            timeoutSeconds: 15
          readinessProbe:
            exec:
              command: ["rabbitmq-diagnostics", "ping"]
            initialDelaySeconds: 20
            periodSeconds: 60
            timeoutSeconds: 10
          volumeMounts:
            - name: taiga-async-rabbitmq
              mountPath: /var/lib/rabbitmq/mnesia
            - name: memory-limit-config
              mountPath: /etc/rabbitmq/conf.d/20-memory-limit.conf
              subPath: 20-memory-limit.conf
      volumes:
        - name: taiga-async-rabbitmq
          persistentVolumeClaim:
            claimName: taiga-async-rabbitmq
        - name: memory-limit-config
          configMap:
            name: rabbitmq-memory-limit-config
            items:
              - key: 20-memory-limit.conf
                path: 20-memory-limit.conf
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taiga-async
  namespace: pbs-taiga
  labels:
    app: taiga-async
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: taiga-async
  template:
    metadata:
      labels:
        app: taiga-async
    spec:
      nodeSelector:
        kaas.infomaniak.cloud/instance-pool: pck-8kxhclv-pdp
      affinity:
        podAffinity: # We need to schedule this on the same node as taiga-back because of shared volumes
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - taiga-back
              topologyKey: "kubernetes.io/hostname"
      volumes:
        - name: taiga-static
          persistentVolumeClaim:
            claimName: taiga-static
        - name: taiga-media
          persistentVolumeClaim:
            claimName: taiga-media
      containers:
        - name: taiga-async
          image: ghcr.io/scout-ch/pbs-taiga-back:latest@sha256:b0333a992a97fafd944960ba107724b817f6ecce6d90f1d9e2049155ded65e9f
          ports:
            - containerPort: 8000
          command: ["/taiga-back/docker/custom_entrypoint.sh"]
          args:
            [
              "celery",
              "-A",
              "taiga.celery",
              "worker",
              "-B",
              "--concurrency",
              "4",
              "-l",
              "INFO",
            ]
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: taiga-static
              mountPath: /taiga-async/static
            - name: taiga-media
              mountPath: /taiga-async/media
---
apiVersion: v1
kind: Service
metadata:
  name: taiga-async-rabbitmq
  namespace: pbs-taiga
spec:
  selector:
    app: taiga-async-rabbitmq
  ports:
    - port: 5672
      targetPort: 5672
