kubeconfigs/10-taiga-events.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taiga-events-rabbitmq
  namespace: pbs-taiga
spec:
  selector:
    matchLabels:
      app: taiga-events-rabbitmq
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: taiga-events-rabbitmq
    spec:
      containers:
        - name: taiga-events-rabbitmq
          image: rabbitmq:4.1-management-alpine@sha256:3f32da0a5093dc67dbd102fc539ab3acaddcc41b4f8d0282c6698b3187517376
          ports:
            - containerPort: 5672
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - name: taiga-events-rabbitmq
              mountPath: /var/lib/rabbitmq
      volumes:
        - name: taiga-events-rabbitmq
          persistentVolumeClaim:
            claimName: taiga-events-rabbitmq
---
apiVersion: v1
kind: Service
metadata:
  name: taiga-events-rabbitmq
  namespace: pbs-taiga
spec:
  selector:
    app: taiga-events-rabbitmq
  ports:
    - port: 5672
      targetPort: 5672
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taiga-events
  namespace: pbs-taiga
  labels:
    app: taiga-events
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: taiga-events
  template:
    metadata:
      labels:
        app: taiga-events
    spec:
      containers:
        - name: taiga-events
          image: taigaio/taiga-events:6.7.0@sha256:126ef65eb0d58c04ce460dbc9d6575ae6f2915d145f68f8e4d136cc4fc43d584
          ports:
            - containerPort: 8888
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3023
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3023
          startupProbe:
            httpGet:
              path: /healthz
              port: 3023
            periodSeconds: 1
            failureThreshold: 60
---
apiVersion: v1
kind: Service
metadata:
  name: taiga-events
  namespace: pbs-taiga
spec:
  selector:
    app: taiga-events
  ports:
    - port: 8888
      targetPort: 8888
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taiga-events
  namespace: pbs-taiga
  labels:
    app: taiga-events
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
    - host: taiga.scout.ch
      http:
        paths:
          - pathType: Prefix
            path: "/events"
            backend:
              service:
                name: taiga-events
                port:
                  number: 8888
