kubeconfigs/10-taiga-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taiga-front
  namespace: pbs-taiga
  labels:
    app: taiga-front
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: taiga-front
  template:
    metadata:
      labels:
        app: taiga-front
    spec:
      nodeSelector:
        kaas.infomaniak.cloud/instance-pool: pck-8kxhclv-pdp
      containers:
        - name: taiga-front
          image: ghcr.io/scout-ch/pbs-taiga-front:latest@sha256:fcce724ea901f119f3b2e2436ef624bff452be5e76411925843066d9d41d7296
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /
              port: 80
          startupProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 1
            failureThreshold: 60
          livenessProbe:
            httpGet:
              path: /
              port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: taiga-front
  namespace: pbs-taiga
spec:
  selector:
    app: taiga-front
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taiga-front
  namespace: pbs-taiga
  labels:
    app: taiga-front
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
    - host: taiga.scout.ch
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: taiga-front
                port:
                  number: 80
